feat: Updated READ.ME

--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "middle.messenger.praktikum.yandex",
   "version": "1.0.0",
   "description": "MeowTalk - Awesome Messenger",
-  "main": "index.js",
   "scripts": {
     "start": "parcel src/pages/index.hbs --no-cache",
     "build": "parcel build src/pages/index.hbs",
@@ -26,5 +25,11 @@
     "parcel": "2.7.0",
     "postcss": "^8.4.16",
     "postcss-import": "14.1.0"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
