--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "MeowTalk - Awesome Messenger",
   "scripts": {
-    "start": "parcel src/pages/index.hbs --no-cache",
+    "dev": "parcel src/pages/index.hbs --no-cache",
     "build": "parcel build src/pages/index.hbs",
+    "start": "node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
