--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "parcel src/pages/index.hbs --no-cache",
     "build": "parcel build src/pages/index.hbs",
-    "start": "node ./server.js",
+    "start": "npm run build && node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
