--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MeowTalk - Awesome Messenger",
   "scripts": {
     "dev": "parcel src/index.html --no-source-maps",
-    "build": "parcel build src/index.html --no-source-maps --no-cache --public-url ./",
+    "build": "parcel build src/index.html --no-source-maps --no-cache",
     "start": "npm run build && node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint '**/*.ts'",
@@ -37,12 +37,8 @@
     "typescript": "4.8.4"
   },
   "dependencies": {
-    "babel-core": "6.26.3",
     "express": "4.18.1",
     "handlebars": "4.7.7",
     "nanoid": "4.0.0"
-  },
-  "engines": {
-    "node": ">=12.0.0"
   }
 }
