--- a/package.json
+++ b/package.json
@@ -40,5 +40,15 @@
     "express": "4.18.1",
     "handlebars": "4.7.7",
     "nanoid": "4.0.0"
+  },
+  "engines": {
+    "node": ">= 12"
+  },
+  "targets": {
+    "default": {
+      "engines": {
+        "browsers": ">= 50%"
+      }
+    }
   }
 }
